fixed footer nav text alignment

--- a/src/components/FooterNav/FooterNav.module.scss
+++ b/src/components/FooterNav/FooterNav.module.scss
@@ -21,6 +21,7 @@
     font-size: 9px;
     line-height: 16px;
     color: vars.$navGrey;
+    text-align: center;
   }
 
   .footerNavNav {
